plugins {
    id 'java-library'
    id 'maven-publish'
    id 'com.github.johnrengelman.shadow' version '8.1.1'
}

// Project version is set via the VERSION environment
// variable in the Github Actions workflow and should not be changed here.
def projectVersion = System.getenv("VERSION") ?: '1.0.0'
def runeLiteVersion = '1.12.17' // latest.release

version = projectVersion
project.version = projectVersion


repositories {
    mavenCentral()
    maven {
        url = 'https://repo.runelite.net'
    }
    maven { url 'https://jitpack.io' }
    mavenLocal()
}

dependencies {
    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.18.1'
    implementation("it.unimi.dsi:fastutil:8.5.18")
    implementation group: 'com.google.inject', name: 'guice', version: '4.2.2'
    implementation("com.google.code.gson:gson:2.10.1")
    implementation("org.benf:cfr:0.152")
    implementation("com.google.guava:guava:31.1-jre")
    implementation("org.slf4j:slf4j-api:1.7.25")
    implementation("org.slf4j:slf4j-simple:1.7.25")
    implementation("net.bytebuddy:byte-buddy:1.18.4")
    implementation("net.bytebuddy:byte-buddy-agent:1.18.4")

    compileOnly 'org.projectlombok:lombok:1.18.30'
    annotationProcessor 'org.projectlombok:lombok:1.18.30'

    implementation group: 'net.runelite', name:'client', version: runeLiteVersion
    testImplementation 'junit:junit:4.12'
    testCompileOnly 'org.projectlombok:lombok:1.18.30'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.30'
    testImplementation group: 'net.runelite', name:'client', version: runeLiteVersion
    testImplementation group: 'net.runelite', name:'jshell', version: runeLiteVersion
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.0'
    testRuntimeOnly 'org.junit.vintage:junit-vintage-engine:5.10.0'
}

test {
    useJUnitPlatform()
}

sourceSets {
    test {
        java {
            srcDirs = ['src/test/java', 'tests/sim']
        }
    }
}


java {
    withSourcesJar()
    withJavadocJar()
    toolchain {
        languageVersion = JavaLanguageVersion.of(11)
    }
}

jar {
    archiveBaseName = 'kraken-api'
    archiveVersion = projectVersion
}

publishing {
    publications {
        maven(MavenPublication) {
            from components.java
            groupId = 'com.github.kraken'
            artifactId = 'kraken-api'
            version = project.version

            pom {
                name = 'Kraken API'
                description = 'Kraken API Automation Library for Old School RuneScape'
                url = 'https://github.com/Kraken-Plugins/kraken-api'

                licenses {
                    license {
                        name = 'MIT License'
                        url = 'https://opensource.org/licenses/MIT'
                    }
                }

                developers {
                    developer {
                        id = 'cbartram'
                        name = 'RuneWraith'
                        email = 'runewraith.business@gmail.com'
                    }
                }

                scm {
                    connection = 'scm:git:git://github.com/Kraken-Plugins/kraken-api.git'
                    developerConnection = 'scm:git:ssh://github.com/Kraken-Plugins/kraken-api.git'
                    url = 'https://github.com/Kraken-Plugins/kraken-api'
                }
            }
        }
    }

    repositories {
        maven {
            name = "GitHubPackages"
            url = uri("https://maven.pkg.github.com/Kraken-Plugins/kraken-api")
            credentials {
                username = project.findProperty("gpr.user") ?: System.getenv("GITHUB_ACTOR")
                password = project.findProperty("gpr.key") ?: System.getenv("GITHUB_TOKEN")
            }
        }
    }
}
